--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,10 @@
-# SimpleVanish doesn't provide any placeholder other than %prefix% and %player%. You must have PlaceholderAPI for other placeholders.
-# You have to install ProtocolLib for editing client-side max player and player count in server list
+# You should install PlaceholderAPI for placeholders.
+# You have to install ProtocolLib for editing client-side max player and player count in server list.
 
 prefixes:
   global: '&8[&6SST&8]&r'
   warps: '&8[&6Warps&8]&r'
+  spawn: '&8[&6Spawn&8]&r'
 permissions:
   admin-permission: 'sst.admin'
   staff-permission: 'sst.staff'
@@ -30,23 +31,43 @@ remove-vanished-players:
 MOTD: # MOTD requires ProtocolLib when its enabled.
   enabled: false
   value: |
-    %prefix% &aThis server is using &b&lSSTh&a!
+    %prefix% &aThis server is using &b&lSST&a!
     %prefix% &b&lSST&a is awesome!
+
+auto-respawn:
+  enabled: true # Removes respawn screen
+  permission-required: false # sst.autorespawn
 
 warps:
   teleport-time: 5 # in second
   staff-bypass-time: true # if true, makes staff teleport immediately
+  cancel-when-move:
+    settings:
+      block-move: true # if true, teleport process will be cancelled when player moves
+      cancel-teleport: false
+    mode: EVERYONE
+    # Modes: EVERYONE, STAFF
+  cancel-damage:
+    settings:
+      block-damage: true
+      cancel-teleport: false
+    mode: EVERYONE
+    # Modes: EVERYONE, STAFF
+    # EVERYONE: blocks damage for everyone when teleporting to warp
+    # STAFF: blocks damage for staff when teleporting to warp
 
 other-messages:
   help-message:
     beginning: |
       %prefix%
+      &6Arguments with [] are optional
     only-staff: |
       &9/sst reload &f- &6Reloads config.
       &9/vanish [<another player>] &f- &6Hides you (or given player) from non-staff players. Use again to disable vanish mode.
     everyone: |
-      &9/warp <name> [<arguments>] &f- &6Teleports you to given warp. For help abouta arguments, type /sst help warpArgs.
+      &9/warp <name> [<arguments>] &f- &6Teleports you to given warp. For help about arguments, type /sst help warpArgs.
     ending: |
+      &6Arguments with [] are optional
       %prefix%
     other:
       warpArgs:
@@ -57,13 +78,17 @@ other-messages:
             &9/warp <name> --del &f- &6Deletes given warp.
             &9/warp <name> --force &f- &6Overwrites (if exists) given warp.
             &9/warp <name> --info &f- &6Sends information of given warp.
+          everyone: |
+
           ending: |
             %prefix:warp%
   config-reloaded: '%prefix% &eConfig has been reloaded %player%!'
+  wrong-usage: '%prefix% &cWrong usage. /sst help'
   vanish:
     activated: '%prefix% &eVanish mode: &bON'
     disabled: '%prefix% &eVanish mode: &cOFF'
     toggled: '%prefix% &eVanish mode toggled for &b%other%&e.'
+    player-not-found: '%prefix% &cSorry, I couldn''t find that player.'
   warps:
       created: '%prefix:warp% &eYou have created a warp named &b%warp%&e!'
       deleted: '%prefix:warp% &eYou have deleted a warp named &b%warp%&e!'
@@ -77,7 +102,48 @@ other-messages:
         message: |
           %prefix:warp%
           &eYou have teleported to &b%warp%
+      teleport-cancelled: '%prefix:warp% &cTeleport cancelled.'
       list: '%prefix:warp% &eWarp list (%warpamount%): %warps%'
+      no-warp: '&cThere is no warp.'
       saved: '%prefix:warp% &eAll of the warps are saved into warps.yml.'
       no-permission: '%prefix:warp% &cI''m sorry but you can not go to this warp.'
-      info: '%prefix:warp% &eInfo of &b%warp%&e: &b%warpinfo%'
+      info: |
+        %prefix:warp%
+        &eInfo of warp &b%warp%
+        &eLocation: &b%warpLoc%
+        &ePermission: &b%warpPerm%
+        %prefix:warp%
+  spawn:
+      created: |
+        %prefix:spawn% &eSpawn created!
+        %prefix:spawn% &eLocation: &b%spawnlocation%
+      changed: |
+        %prefix:spawn% &eSpawn location changed.
+        %prefix:spawn% &eNew location: &b%spawnlocation%
+      teleporting:
+        mode: TITLE # Modes: ACTIONBAR, TITLE, CHAT
+        message: |
+          %prefix:spawn%
+          &eTeleporting to &bSpawn &ein &b%time%...
+      teleported:
+        mode: TITLE # Modes: ACTIONBAR, TITLE, CHAT
+        message: |
+          %prefix:spawn%
+          &eYou have teleported to &bSpawn
+      teleport-cancelled: '%prefix:spawn% &cTeleport cancelled.'
+      player-not-found: '%prefix:spawn% &cSorry, I couldn''t find that player.'
+      spawn-not-set: '%prefix:spawn% &cSorry, spawn doesn''t exist.'
+      not-enabled: '%prefix:spawn% &cSpawn feature is not enabled.'
+  gamemode:
+    changed: '%prefix% &eYou have changed your gamemode to %gamemode%'
+    changed-other: '%prefix% &eYou have changed %other%''s gamemode to %gamemode%'
+    changed-other-2: '%prefix% &eOyun modun artık %gamemode%.'
+    no-perm: '%prefix% &cYou cannot use gamemode %gamemode%.'
+    not-found: '%prefix% &cI couldn''t found that gamemode.'
+    player-not-found: '%prefix% &cSorry, I couldn''t find that player.'
+    wrong-arguments: '%prefix% &cKomutu hatalı kullandınız.'
+    CREATIVE: Yaratıcı #permission: sst.gamemode.creative
+    SURVIVAL: Hayatta Kalma #permission: sst.gamemode.survival
+    SPECTATOR: Izleyici #permission: sst.gamemode.spectator
+    ADVENTURE: Macera #permission: sst.gamemode.adventure
+
